Создано с помощью Colaboratory

--- a/Homework5_vae.ipynb
+++ b/Homework5_vae.ipynb
@@ -4856,11 +4856,12 @@
         "\n",
         "\n",
         "    def sample(self, n_samples=100):\n",
+        "        self.eval()\n",
         "        z = self.p_z.sample((n_samples, self.latent_dim))\n",
         "        x = self.decode(z)\n",
         "        return torch.clip(x, 0, 1).cpu().detach().numpy()\n"
       ],
-      "execution_count": 81,
+      "execution_count": 83,
       "outputs": []
     },
     {
